--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,5 +1,7 @@
 {% if site.logo %}
+<div class="site-logo">
   <a href="/">
-    <img src="{{ site.logo }}" class="site-logo"/>
+    <img src="{{ site.logo }}"/>
   </a>
+</div>
 {% endif %}
