--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -106,6 +106,7 @@ a {
 }
 
 .page-header {
+  float: clear;
   color: $header-heading-color;
   text-align: center;
   background-color: $header-bg-color;
