--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,10 @@
 
     <header>
       <div class="page-header" role="banner">
-        {% include logo.html %}
-        {% include navbar.html %}
+        <div>
+          {% include logo.html %}
+          {% include navbar.html %}
+        </div>
         <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
         <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       </div>
