--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,7 +1,5 @@
 {% if site.logo %}
-<div class="site-logo">
-  <a href="/">
+  <a href="/" class="site-logo">
     <img src="{{ site.logo }}" class="logo"/>
   </a>
-</div>
 {% endif %}
