--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,5 +1,5 @@
-{% if site.logo %}
-  <a href="/" class="site-logo">
-    <img src="{{ site.logo }}" class="logo"/>
+{% if site.logo.show %}
+  <a href="{{ site.logo.href }}" class="site-logo">
+    <img src="{{ site.logo.url }}" class="logo"/>
   </a>
 {% endif %}
