--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -140,7 +140,7 @@ a.page-link {
 
 .project-name {
   clear: both;
-  margin-top: 0;
+  margin-top: 2rem;
   margin-bottom: 0.1rem;
 
   @include large {
