--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,8 @@
     <header>
       <div class="page-header" role="banner">
           {% include navbar.html %}
-        <h1 class="project-name">{{ page.title }}</h1>
-        <h2 class="project-tagline">{{ page.description }}</h2>
+        <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+        <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       </div>
     </header>
 
