--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,13 +56,9 @@
         <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
       </article>
 
-        <footer class="site-footer">
-            {% if site.include_maintained_by %}
-              {% if site.github.is_project_page %}
-                <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
-              {% endif %}
-            {% endif %}
-          </footer>
+      <footer class="site-footer">
+        {% include footer.html %}
+      </footer>
         </main>
       </body>
     </html>
